Sorted width bug with slider on mobile

--- a/src/AppBundle/Resources/public/css/Default/connections.css
+++ b/src/AppBundle/Resources/public/css/Default/connections.css
@@ -3,8 +3,7 @@
 }
 
 #connection-slider {
-	width: 100% !important;
-	margin: 0 0 10px 0;
+	width: 95% !important;
 }
 
 #connection-slider .slider-handle {
