--- a/src/AppBundle/Resources/public/css/Default/quotePhone.css
+++ b/src/AppBundle/Resources/public/css/Default/quotePhone.css
@@ -12,12 +12,12 @@
 }
 
 .quote .device .h3 {
-    margin: 0;
+    margin: 0 0 10px;
 }
 
 .quote-cost {
     padding: 25px;
-    margin: 25px -15px;
+    margin: 0 -15px 25px;
     background-color: #efefef;
 }
 
@@ -27,7 +27,6 @@
     font-weight: bold;
     font-size: 22px;
 }
-
 .quote-card {
     padding: 0;
     margin-bottom: 25px;
